# sensor-fusion-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gps_imu_batch.cpp  gps_imu_batch_fuser.cpp  gps_imu_batch_fuser.h  gps_imu_fixed_lag.cpp  gps_imu_fixed_lag_fuser.cpp  gps_imu_fixed_lag_fuser.h  gps_imu_isam.cpp  gps_imu_isam_fuser.cpp  gps_imu_isam_fuser.h  gps_source.cpp  gps_source.h  image_landmark_track_source.cpp  image_landmark_track_source.h  imu_source.cpp  imu_source.h  plot_raw_data.cpp  raw_data_plotter.cpp  raw_data_plotter.h  trigonometry.h
nav/: attitude.cpp  attitude.h  coordinate_frame.h  ecef_coordinate_system.cpp  ecef_coordinate_system.h  geodetic_position.cpp  geodetic_position.h  local_coordinate_system.cpp  local_coordinate_system.h  navlab_utils.cpp  navlab_utils.h
plot/: plot.cpp  plot.h  plot_pose.h  python_object_manager.cpp  python_object_manager.h
